--- a/StaffHub/StaffHub.csproj
+++ b/StaffHub/StaffHub.csproj
@@ -6,4 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.26" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StaffHub.ServiceContracts\StaffHub.ServiceContracts.csproj" />
+    <ProjectReference Include="..\StaffHub.Services\StaffHub.Services.csproj" />
+  </ItemGroup>
+
 </Project>
